// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`viewManager viewManager :: commonEditor viewManager :: commonEditor :: Fields viewManager :: commonEditor :: Fields :: CatalogField snapshot 1`] = `
<ReduxForm
  askCatalogs={[Function]}
  catalogs={
    Array [
      Object {
        "items": Array [],
        "name": "catalogName",
      },
    ]
  }
  domainId={1}
  sessionId={1}
  timelineId="timelineId"
/>
`;

exports[`viewManager viewManager :: commonEditor viewManager :: commonEditor :: Fields viewManager :: commonEditor :: Fields :: CatalogField snapshot 2 1`] = `
<ReduxForm
  askCatalogs={[Function]}
  catalogs="requesting"
  domainId={1}
  sessionId={1}
  timelineId="timelineId"
/>
`;
